# rosdyn

./: .coverage.sh  .gitignore  .travis.yml  README.md  cdq  codecov.yml  rosdyn.rosinstall
.github/workflows/: industrial_ci_action.yml
rdyn_core/: CMakeLists.txt  README.md  package.xml  rdyn_coreConfig.cmake.in  rdyn_coreConfigVersion.cmake.in
rdyn_core/cmake/: cnrConfigMacros.cmake
rdyn_core/include/rdyn_core/: base_component.h  frame_distance.h  friction_polynomial1.h  friction_polynomial2.h  ideal_spring.h  kinematics_saturation.h  primitives.h  spacevect_algebra.h  urdf_parser.h
rdyn_core/include/rdyn_core/internal/: kinematics_saturation_impl.h  primitives_impl.h  types.h
rdyn_core/src/: rdyn_core.cpp
rdyn_core/test/: rdyn_speed_test.cpp  test.cpp  test_vectorization.launch  ur10.urdf
rosdyn_core/: CMakeLists.txt  CMakeLists.txt.user.fb1378e  README.md  package.xml
rosdyn_core/cmake/: FindLog4cxx.cmake  cnrConfigMacros.cmake
rosdyn_core/doxygen/: doxygen.in
rosdyn_core/doxygen/html/html/: graph_legend.html  index.html
rosdyn_core/doxygen/html/latex/: refman.tex
rosdyn_core/include/rosdyn_core/: base_component.h  base_component.h.orig  chain_interface.h  chain_state.h  frame_distance.h  frame_distance.h.orig  friction_polynomial1.h  friction_polynomial1.h.orig  friction_polynomial2.h  friction_polynomial2.h.orig  ideal_spring.h  ideal_spring.h.orig  kinematics_saturation.h  primitives.h  primitives.h.orig  rotational.h  spacevect_algebra.h  spacevect_algebra.h.orig  urdf_parser.h  urdf_parser.h.orig
rosdyn_core/include/rosdyn_core/internal/: chain_interface_impl.h  chain_state_impl.h  kinematics_saturation_impl.h  primitives_impl.h  types.h
rosdyn_core/src/: compute_inertia_matrix.cpp  itia_dyn_torque.cpp
rosdyn_core/test/: bug_test.cpp  itia_dyn_elastic_regressor_test.cpp  itia_dyn_solver_test.cpp  itia_inertia_matrix.cpp  jac_speed_test.cpp  rosdyn_speed_test.cpp  rosdyn_speed_test.cpp.orig  test.cpp  test.launch  test_vectorization.launch  vel_speed_test.cpp
rosdyn_gui/: CMakeLists.txt  package.xml  plugin_description.xml
rosdyn_gui/src/: dyn_components.cpp  dyn_components.cpp.orig  dyn_components.h  dyn_components.h.orig  results_popup.cpp  results_popup.cpp.orig  results_popup.h  results_popup.h.orig  rosdyn_gui.cpp  rosdyn_gui.cpp.orig  rosdyn_gui.h  rosdyn_gui.h.orig  setup_popup.cpp  setup_popup.cpp.orig  setup_popup.h  setup_popup.h.orig
rosdyn_identification/: CMakeLists.txt  README.md  package.xml  rosdyn_plugins.xml
rosdyn_identification/include/rosdyn_identification/: rosdyn_gen_interface.h  rosdyn_gen_interface.h.orig  rosdyn_par_estim.h  rosdyn_par_estim.h.orig  rosdyn_par_estim_interface.h
rosdyn_identification/launch/: test_meto.launch  test_meto_exec.launch  test_meto_gen.launch  test_meto_par_estim.launch
rosdyn_identification/scripts/: double_parallelogram.m
rosdyn_identification/scripts/+SRD/: DH.m  cos.m  eye.m  finger_tmp1.mat  finger_tmp2.mat  one.m  rotx.m  roty.m  rotz.m  sin.m  trax.m  tray.m  traz.m  zero.m
rosdyn_identification/scripts/+SRD/+sym/: CDecomposition.m  basepar.m  indipendent_columns.m
rosdyn_identification/scripts/+SRD/+trigoutils/: common_matrix.m  cossin_comb.m  idx2cossin.m  reduceLinConstraints.m  trigocomb.m  trigocomb_001.m
rosdyn_identification/scripts/+SRD/+urdf/: children_matrix.m  create_robot.m  joint_data.m  joint_family.m  parents_matrix.m  parser.m  show_structure.m
rosdyn_identification/scripts/+SRD/@link/: link.m
rosdyn_identification/scripts/+SRD/@robot/: robot.m
rosdyn_identification/scripts/+SRD/@trigofun/: trigofun.m
rosdyn_identification/src/: matplotlibcpp.cpp
rosdyn_identification/src/rosdyn_identification/: .rosdyn_par_estim.cpp.kate-swp  rosdyn_gen_interface.cpp  rosdyn_gen_interface.cpp.orig  rosdyn_par_estim.cpp  rosdyn_par_estim_interface.cpp
rosdyn_identification_msgs/: CMakeLists.txt  package.xml
rosdyn_identification_msgs/action/: MetoParEstim.action  MetoTrjExec.action  MetoTrjGen.action
rosdyn_identification_msgs/msg/: TorqueFitting.msg
rosdyn_utilities/: CMakeLists.txt  package.xml
rosdyn_utilities/include/rosdyn_utilities/: chain_interface.h  chain_interface.h.bkp  chain_state.h  chain_state_n.h  chain_state_publisher.h  filtered_values.h
rosdyn_utilities/include/rosdyn_utilities/internal/: chain_interface_impl.h  chain_state_impl.h  chain_state_n_impl.h  filtered_values_impl.h
rosdyn_utilities/src/: rosdyn_utilities_node_test.cpp
rosdyn_utilities/src/rosdyn_utilities/: chain_interface.cpp  chain_interface.cpp.bkp
rosdyn_utilities/test/: test-old.cpp  test.cpp  test.launch
universal_robot_dynident/: CMakeLists.txt  package.xml
universal_robot_dynident/config/: additional_info.yaml  binary_logger.yaml  meto_general_config.yaml
universal_robot_dynident/launch/: log.launch  test_meto.launch
