<?xml version="1.0"?>
<package format="2">
  <name>rosdyn_utilities</name>
  <version>0.0.0</version>
  <description>The rosdyn_utilities package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="feymann@todo.todo">feymann</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/rosdyn_utilities</url> -->

  <author email="nicola.pedrocchi@stiima.cnr.it">Jane Doe</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>state_space_filters</build_depend>
  <build_depend>eigen_matrix_utils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosdyn_core</build_depend>

  <build_export_depend>state_space_filters</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosdyn_core</build_export_depend>

  <exec_depend>state_space_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosdyn_core</exec_depend>

  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
